--- a/lang/main-de.json
+++ b/lang/main-de.json
@@ -72,7 +72,7 @@
     },
     "calendarSync": {
         "addMeetingURL": "Konferenzlink hinzufügen",
-        "confirmAddLink": "Möchten Sie einen Jitsi-Link zu diesem Termin hinzufügen?",
+        "confirmAddLink": "Möchten Sie einen Exentriq-Link zu diesem Termin hinzufügen?",
         "error": {
             "appConfiguration": "Kalenderintegration ist nicht richtig konfiguriert.",
             "generic": "Ein Fehler ist aufgetreten. Prüfen Sie Ihre Kalendereinstellungen oder versuchen Sie, den Kalender zu aktualisieren.",
@@ -481,7 +481,7 @@
         "answer": "Antworten",
         "audioCallTitle": "Eingehender Anruf",
         "decline": "OK",
-        "productLabel": "von Jitsi Meet",
+        "productLabel": "von Exentriq Meet",
         "videoCallTitle": "Eingehender Videoanruf"
     },
     "info": {
@@ -736,7 +736,7 @@
         "noiseSuppressionFailedTitle": "Rauschunterdrückung konnte nicht gestartet werden",
         "noiseSuppressionNoTrackDescription": "Bitte eigenes Mikrofon zuerst aktivieren.",
         "noiseSuppressionStereoDescription": "Rauschunterdrückung unterstützt aktuell keinen Stereoton.",
-        "oldElectronClientDescription1": "Sie scheinen eine alte Version des Jitsi-Meet-Clients zu nutzen. Diese hat bekannte Schwachstellen. Bitte aktualisieren Sie auf unsere ",
+        "oldElectronClientDescription1": "Sie scheinen eine alte Version des Exentriq-Meet-Clients zu nutzen. Diese hat bekannte Schwachstellen. Bitte aktualisieren Sie auf unsere ",
         "oldElectronClientDescription2": "aktuelle Version",
         "oldElectronClientDescription3": "!",
         "participantWantsToJoin": "Möchte an der Konferenz teilnehmen",
@@ -1434,15 +1434,15 @@
         "go": "Los",
         "goSmall": "Los",
         "headerSubtitle": "Sichere und hochqualitative Meetings",
-        "headerTitle": "Jitsi Meet",
+        "headerTitle": "Exentriq Meet",
         "info": "Einwahlinformationen",
-        "jitsiOnMobile": "Jitsi unterwegs – einfach unsere Apps herunterladen und Meetings von überall starten",
+        "jitsiOnMobile": "Exentriq unterwegs – einfach unsere Apps herunterladen und Meetings von überall starten",
         "join": "ERSTELLEN / BEITRETEN",
         "logo": {
             "calendar": "Kalender Logo",
             "desktopPreviewThumbnail": "Desktop-Vorschau Thumbnail",
             "googleLogo": "Google Logo",
-            "logoDeepLinking": "Jitsi Meet Logo",
+            "logoDeepLinking": "Exentriq Meet Logo",
             "microsoftLogo": "Microsoft Logo",
             "policyLogo": "Richtlinienlogo"
         },
