--- a/lang/main-fa.json
+++ b/lang/main-fa.json
@@ -489,7 +489,7 @@
         "answer": "پاسخ‌دادن",
         "audioCallTitle": "تماس ورودی",
         "decline": "ردکردن",
-        "productLabel": "از جلسه Jitsi",
+        "productLabel": "از جلسه Exentriq",
         "videoCallTitle": "تماس ویدیویی ورودی"
     },
     "info": {
@@ -1446,15 +1446,15 @@
         "go": "برویم",
         "goSmall": "برویم",
         "headerSubtitle": "جلسات امن و با کیفیت بالا",
-        "headerTitle": "Jitsi Meet",
+        "headerTitle": "Exentriq Meet",
         "info": "اطلاعات شماره‌گیری",
-        "jitsiOnMobile": "Jitsi روی تلفن همراه - برنامه ما را بارگیری کنید و جلسه‌ای را از هرکجا آغاز کنید",
+        "jitsiOnMobile": "Exentriq روی تلفن همراه - برنامه ما را بارگیری کنید و جلسه‌ای را از هرکجا آغاز کنید",
         "join": "ایجاد / پیوستن",
         "logo": {
             "calendar": "نشان‌وارهٔ تقویم",
             "desktopPreviewThumbnail": "تصویر بندانگشتی پیش‌نمایش میزکار",
             "googleLogo": "نشان‌وارهٔ گوگل",
-            "logoDeepLinking": "نشان‌وارهٔ Jitsi Meet",
+            "logoDeepLinking": "نشان‌وارهٔ Exentriq Meet",
             "microsoftLogo": "نشان‌وارهٔ Microsoft",
             "policyLogo": "نشان‌وارهٔ خط مشی"
         },
