--- a/lang/main-zhCN.json
+++ b/lang/main-zhCN.json
@@ -444,7 +444,7 @@
         "answer": "接听",
         "audioCallTitle": "来电",
         "decline": "拒听",
-        "productLabel": "来自 Jitsi Meet",
+        "productLabel": "来自 Exentriq Meet",
         "videoCallTitle": "视频通话"
     },
     "info": {
@@ -1338,7 +1338,7 @@
         "go": "开始",
         "goSmall": "开始",
         "headerSubtitle": "安全且高品质的会议",
-        "headerTitle": "Jitsi Meet",
+        "headerTitle": "Exentriq Meet",
         "info": "信息",
         "jitsiOnMobile": "手机版Jitsi – 下载我们的APP，随时随地都能开始会议",
         "join": "创建/加入",
@@ -1346,7 +1346,7 @@
             "calendar": "日历图标",
             "desktopPreviewThumbnail": "桌面预览缩略图",
             "googleLogo": "谷歌图标",
-            "logoDeepLinking": "Jitsi Meet图标",
+            "logoDeepLinking": "Exentriq Meet图标",
             "microsoftLogo": "微软图标",
             "policyLogo": "政策图标"
         },
